[tool.poetry]
name = "rl-papers"
version = "0.1.0"
description = ""
authors = ["Fraser Mince <frasermince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
pytorch-lightning = "^1.6.3"
numpy = "^1.20.2"
lightning-bolts = "^0.3.3"
tensorboard = "^2.4.0"
PyVirtualDisplay = "^2.1"
wandb = "^0.10.27"
torchvision = "^0.9.1"
sklearn = "^0.0"
ipdb = "^0.13.7"
gym = {extras = ["atari"], version = "^0.18.0"}
packaging = "^20.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
